pgmemcache 2.1.1-DEV
====================
* Fix errors and warnings exposed by GCC 4.8
* Make the memcache binary protocol the default

pgmemcache 2.1.0
================
* CREATE EXTENSION support
* PostgreSQL 9.2 support
* Fix crashers on NULL inputs
* Fix a random initialization failure on startup
* Compatibility with newer libmemcached versions
* Updated Debian packaging scripts

pgmemcache 2.0.6
================
* Fix building on earlier releases than 9.1. (thanks for the bugreport from Florian Von Block)
* Add libsasl2-dev to build deps

pgmemcache 2.0.5
================
* Some preliminary work on SASL support
* Make pgmemcache work with PG 9.1
* Support for building debs against PG 9.0 and 9.1
* Move to GIT.
* Fix erroneous memory allocation get_multi (thanks iglue)

pgmemcache 2.0.4
================
* Add support for building an HTML doc out of the README.pgmemcache
* Make pgmemcache work with libmemcached's 0.39 and 0.40 which again break API compatibility
   * Remove memcache_stats(TEXT) (Note, memcache_stats() is still supported)

pgmemcache 2.0.3
===================
* Add support for all libmemcached 0.38 behaviors (a few had been added since these were updated the last time)
* Add preliminary Debian packaging support, documentation was updated a bit to reflect this.

pgmemcache 2.0.2
===================
* Make pgmemcache work with libmemcached 0.38 memory allocators.
This bumps up pgmemcache's libmemcached requirement up to 0.38.

pgmemcache 2.0.1
===================
* Remove some deprecated documentation
* Fix bug "[#1010761] Crash with pgmemcache 2.0.0 and postgres 8.4", thanks to Marc Munro for
pointing out the problem and a fix for it.
* Make libmemcached use PostgreSQL memory allocation routines. (requires libmemcached 0.31+), based on a patch from
Peter Meszaros with some editorialization by Hannu Valtonen. Note this bumps up our libmemcached minimum requirement to 0.31.

pgmemcache 2.0.0
===================
Finally a 2.0.0 release.
