@@ -1,6 +1,5 @@
 SELECT memcache_server_add('localhost');
 SELECT memcache_stats();
-SELECT memcache_stats('pid');
 SELECT memcache_delete('jeah');
 SELECT memcache_set('jeah','test_value1');
 SELECT memcache_add('counter','10');
